20-sg-rules/main.tf
resource "aws_security_group_rule" "bastion_internet" {
  type      = "ingress"
  from_port = 22
  to_port   = 22
  protocol  = "tcp"
  #cidr_blocks       = ["0.0.0.0/0"] # from internet
  cidr_blocks       = [local.my_ip]
  security_group_id = local.bastion_sg_id
}

resource "aws_security_group_rule" "mongodb_bastion" {
  type      = "ingress"
  from_port = 22
  to_port   = 22
  protocol  = "tcp"
  // which means mongodb accepting connection from bastion
  source_security_group_id = local.bastion_sg_id
  security_group_id        = local.mongodb_sg_id
}

resource "aws_security_group_rule" "mongodb_catalogue" {
  type      = "ingress"
  from_port = 27017
  to_port   = 27017
  protocol  = "tcp"
  // which means mongodb accepting connection from catalogue
  source_security_group_id = local.catalogue_sg_id
  security_group_id        = local.mongodb_sg_id
}

resource "aws_security_group_rule" "mongodb_user" {
  type      = "ingress"
  from_port = 27017
  to_port   = 27017
  protocol  = "tcp"
  // which means mongodb accepting connection from user
  source_security_group_id = local.user_sg_id
  security_group_id        = local.mongodb_sg_id
}

resource "aws_security_group_rule" "redis_bastion" {
  type      = "ingress"
  from_port = 22
  to_port   = 22
  protocol  = "tcp"
  // which means redis accepting connection from bastion
  source_security_group_id = local.bastion_sg_id
  security_group_id        = local.redis_sg_id
}


resource "aws_security_group_rule" "mysql_bastion" {
  type      = "ingress"
  from_port = 22
  to_port   = 22
  protocol  = "tcp"
  // which means mysql accepting connection from bastion
  source_security_group_id = local.bastion_sg_id
  security_group_id        = local.mysql_sg_id
}


resource "aws_security_group_rule" "rabbitmq_bastion" {
  type      = "ingress"
  from_port = 22
  to_port   = 22
  protocol  = "tcp"
  // which means rabbitmq accepting connection from bastion
  source_security_group_id = local.bastion_sg_id
  security_group_id        = local.rabbitmq_sg_id
}

resource "aws_security_group_rule" "backend_alb_bastion" {
  type      = "ingress"
  from_port = 80
  to_port   = 80
  protocol  = "tcp"
  // which means backend_alb accepting connection from bastion
  source_security_group_id = local.bastion_sg_id
  security_group_id        = local.backend_alb_sg_id
}

// catalogue is accepting connections from bastion on port ssh 22
resource "aws_security_group_rule" "catalogue_bastion" {
  type      = "ingress"
  from_port = 22
  to_port   = 22
  protocol  = "tcp"
  // which means catalogue accepting connection from bastion
  source_security_group_id = local.bastion_sg_id
  security_group_id        = local.catalogue_sg_id
}

resource "aws_security_group_rule" "catalogue_backend_alb" {
  type              = "ingress"
  from_port         = 8080
  to_port           = 8080
  protocol          = "tcp"
  # which means catalogue accepting connection from backend_alb
  source_security_group_id = local.backend_alb_sg_id
  security_group_id = local.catalogue_sg_id
}
